# french-lawyer

./: .gitignore  Makefile  README.md  pyproject.toml
src/app/: main.py
src/app/prompt_templates/: french_lawyer.txt
