[project]
name = "genai"
version = "0.1.0"
description = "French lawyer using Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "ruff>=0.10.0",
    "scikit-learn>=1.6.1",
    "vertexai>=1.71.1",
]s

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"
